--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "axios": "^1.12.2",
     "odometer": "^0.4.8",
     "owl.carousel": "^2.3.4",
     "pinia": "^3.0.3",
     "swiper": "^12.0.2",
     "vue": "^3.5.18",
+    "vue-lazyload": "^3.0.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
