--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "screenshots": "tsx scripts/capture-screenshots.ts",
+    "screenshots:missing": "tsx scripts/capture-missing-screenshots.ts"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
@@ -56,6 +58,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.18",
+    "tsx": "^4.20.6",
     "typescript": "5.9.2",
     "unplugin-icons": "^22.5.0",
     "unplugin-vue-components": "^30.0.0",
