--- a/be/composer.json
+++ b/be/composer.json
@@ -59,10 +59,13 @@
         ],
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "infisical run -- npx concurrently -c \"#93c5fd,#fb7185\" \"php artisan serve\" \"php artisan pail --timeout=0\" --names=server,logs --kill-others"
+            "infisical run -- npx concurrently -c \"#93c5fd,#fb7185\" \"php artisan serve --host=0.0.0.0 --port=8000\" \"php artisan pail --timeout=0\" --names=server,logs --kill-others"
         ],
         "migrate": [
             "infisical run -- php artisan migrate"
+        ],
+        "migrate:fresh": [
+            "infisical run -- php artisan migrate:fresh --seed"
         ],
         "test": [
             "@php artisan config:clear --ansi",
